--- a/TaskTracker/TaskTracker/TaskTracker.csproj
+++ b/TaskTracker/TaskTracker/TaskTracker.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="16.4.0.54" />
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
   </ItemGroup>
 
   <ItemGroup>
