--- a/TaskTracker/TaskTracker/TaskTracker.csproj
+++ b/TaskTracker/TaskTracker/TaskTracker.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="16.4.0.54" />
     <PackageReference Include="Syncfusion.Xamarin.SfCarousel" Version="16.4.0.54" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="16.4.0.54" />
+    <PackageReference Include="Syncfusion.Xamarin.SfPopupLayout" Version="16.4.0.54" />
+    <PackageReference Include="Syncfusion.Xamarin.SfPullToRefresh" Version="16.4.0.54" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRadialMenu" Version="16.4.0.54" />
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
   </ItemGroup>
 
