--- a/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
+++ b/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
@@ -58,6 +58,9 @@
     <PackageReference Include="Syncfusion.Xamarin.Core">
       <Version>16.4.0.54</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator">
+      <Version>16.4.0.54</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfCarousel">
       <Version>16.4.0.54</Version>
     </PackageReference>
@@ -141,6 +144,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\plus.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\key.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\account.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
