--- a/TaskTracker/TaskTracker/TaskTracker.csproj
+++ b/TaskTracker/TaskTracker/TaskTracker.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="16.4.0.54" />
+    <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator" Version="16.4.0.54" />
     <PackageReference Include="Syncfusion.Xamarin.SfCarousel" Version="16.4.0.54" />
     <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="16.4.0.54" />
     <PackageReference Include="Syncfusion.Xamarin.SfPopupLayout" Version="16.4.0.54" />
