--- a/TaskTracker/TaskTracker/TaskTracker.csproj
+++ b/TaskTracker/TaskTracker/TaskTracker.csproj
@@ -11,14 +11,14 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="Syncfusion.Xamarin.Core" Version="16.4.0.54" />
-    <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator" Version="16.4.0.54" />
-    <PackageReference Include="Syncfusion.Xamarin.SfCarousel" Version="16.4.0.54" />
-    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="16.4.0.54" />
-    <PackageReference Include="Syncfusion.Xamarin.SfPopupLayout" Version="16.4.0.54" />
-    <PackageReference Include="Syncfusion.Xamarin.SfPullToRefresh" Version="16.4.0.54" />
-    <PackageReference Include="Syncfusion.Xamarin.SfRadialMenu" Version="16.4.0.54" />
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="17.1.0.40" />
+    <PackageReference Include="Syncfusion.Xamarin.SfBusyIndicator" Version="17.1.0.40" />
+    <PackageReference Include="Syncfusion.Xamarin.SfCarousel" Version="17.1.0.40" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="17.1.0.40" />
+    <PackageReference Include="Syncfusion.Xamarin.SfPopupLayout" Version="17.1.0.40" />
+    <PackageReference Include="Syncfusion.Xamarin.SfPullToRefresh" Version="17.1.0.40" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRadialMenu" Version="17.1.0.40" />
+    <PackageReference Include="Xamarin.Forms" Version="3.6.0.293080" />
   </ItemGroup>
 
   <ItemGroup>
@@ -50,6 +50,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\MainPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\RegisterPage.xaml">
