--- a/TaskTracker/TaskTracker/TaskTracker.csproj
+++ b/TaskTracker/TaskTracker/TaskTracker.csproj
@@ -59,4 +59,8 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Popups\" />
+  </ItemGroup>
 </Project>
