--- a/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
+++ b/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
@@ -55,6 +55,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.Buttons">
+      <Version>17.1.0.40</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Core">
       <Version>17.1.0.40</Version>
     </PackageReference>
