--- a/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
+++ b/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
@@ -67,6 +67,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfCarousel">
       <Version>17.1.0.40</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfComboBox">
+      <Version>17.1.0.40</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfDataForm">
       <Version>17.1.0.40</Version>
     </PackageReference>
@@ -171,6 +174,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\check.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\arrows.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
