--- a/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
+++ b/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
@@ -113,6 +113,7 @@
   <ItemGroup>
     <Compile Include="Localization.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="PicturePicker.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
