--- a/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
+++ b/TaskTracker/TaskTracker.Android/TaskTracker.Android.csproj
@@ -159,9 +159,6 @@
     <AndroidResource Include="Resources\drawable\key.xml" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\user.xml" />
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\drawable\delete.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +175,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\arrows.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\user.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
